# iot-security-module-preview

./: .gitignore  .gitmodules  LICENSE  NOTICE.txt  README.md
NXP/MIMXRT1060-EVK/: CMakeLists.txt
NXP/MIMXRT1060-EVK/app/: azure_config.h  azure_iothub.c  main.c
NXP/MIMXRT1060-EVK/lib/: CMakeLists.txt
azure_iot_security_module/: CMakeLists.txt  README.md
azure_iot_security_module/azure_iot_security_core/inc/asc_security_core/: configuration.h
azure_iot_security_module/azure_iot_security_core/inc/asc_security_core/model/: event.h  message.h
azure_iot_security_module/azure_iot_security_core/src/: collectors_information.c  core.c
azure_iot_security_module/azure_iot_security_core/src/model/: event.c
azure_iot_security_module/azure_iot_security_core/src/model/message/: message_v10.c
azure_iot_security_module/azure_iot_security_core/src/model/schema/: schema_connection_create.c
common/azure/: azure_mqtt.c
img/: img - Shortcut.lnk
samples/: CMakeLists.txt
samples/app/: main.c  nx_azure_iot_cert.c  nx_user.h
samples/app/demo_asc/: demo_asc.c  demo_asc.md
samples/app/demo_iot_security_module_mqtt/: demo_iot_security_module_mqtt.c  demo_iot_security_module_mqtt.md
samples/app/newlibc/: syscalls.c
samples/cmake/: utilities.cmake
samples/ports/cortex_m0/gnu/: CMakeLists.txt  STM32F030R8Tx_FLASH.ld
samples/ports/cortex_m3/gnu/: CMakeLists.txt  STM32F303VCTx_FLASH.ld
samples/ports/cortex_m4/gnu/: CMakeLists.txt  STM32F407VGTx_FLASH.ld  STM32F411VEHx_FLASH.ld  STM32F429ZITx_FLASH.ld  STM32L475VGTX_FLASH.ld  tx_vector_table.S
samples/ports/cortex_m7/gnu/: CMakeLists.txt  STM32F723IEKx_FLASH.ld  STM32F730I8Kx_FLASH.ld
samples/ports/linux/gnu/: CMakeLists.txt
samples/tools/: flash.bat  mimxrt1060-evk.cfg  rebuild.bat  rebuild.sh
